--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome | My Portfolio</title>
+  <title>Welcome | Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,98 +16,37 @@
   </nav>
 
   <header class="welcome-hero">
-    <img src="images/headshot.jpg" alt="Your Headshot" class="headshot">
-    <h1>Your Name</h1>
-    <p>Welcome to my portfolio!</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYDnmwVEQ4p-8Uq4Xjw9G-droVq2M4FAfoOA&s" alt="Your Headshot" class="headshot">
+    <h1>Jhervhyce Concepcion</h1>
   </header>
 
-  <section>
-    <h2>Bio</h2>
-    <p>Write a short bio about who you are, where you’re from, and your interests.</p>
+  <section>     <h2>Bio</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci varius natoque penatibus et magnis dis parturient montes nascetur ridiculus mus donec rhoncus eros lobortis nulla molestie mattis scelerisque maximus eget fermentum odio phasellus non purus est efficitur laoreet mauris pharetra vestibulum fusce dictum risus blandit quis suspendisse aliquet nisi sodales consequat magna ante condimentum neque at luctus nibh finibus facilisis dapibus etiam interdum tortor ligula congue sollicitudin erat viverra ac tincidunt nam porta elementum a enim euismod quam justo lectus commodo augue arcu dignissim velit aliquam imperdiet mollis nullam volutpat porttitor ullamcorper rutrum gravida cras eleifend turpis fames primis vulputate ornare sagittis vehicula praesent dui felis venenatis ultrices proin libero feugiat tristique accumsan maecenas potenti ultricies habitant morbi senectus netus suscipit auctor curabitur facilisi cubilia curae hac habitasse platea dictumst lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum.</p>
   </section>
 
   <section>
     <h2>Personal Statement</h2>
-    <p>This is where you share your mission, passion, and what drives you.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci varius natoque penatibus et magnis dis parturient montes nascetur ridiculus mus donec rhoncus eros lobortis nulla molestie mattis scelerisque maximus eget fermentum odio phasellus non purus est efficitur laoreet mauris pharetra vestibulum fusce dictum risus blandit quis suspendisse aliquet nisi sodales consequat magna ante condimentum neque at luctus nibh finibus facilisis dapibus etiam interdum tortor ligula congue sollicitudin erat viverra ac tincidunt nam porta elementum a enim euismod quam justo lectus commodo augue arcu dignissim velit aliquam imperdiet mollis nullam volutpat porttitor ullamcorper rutrum gravida.</p>
   </section>
 
   <section>
     <h2>Goals & Objectives</h2>
     <ul>
-      <li>Goal 1</li>
-      <li>Goal 2</li>
-      <li>Objective 1</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipiscing elit.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipiscing elit.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipiscing elit.</li>
     </ul>
   </section>
 
   <section>
     <h2>Contact Info</h2>
-    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-    <p>Phone: (123) 456-7890</p>
-    <p>LinkedIn | GitHub</p>
+    <p>Email: <a href="mailto:you@example.com">jhervhyce.concepcion@gmail.com</a></p>
+    <p>Phone: (808) 381-4792</p>
+    <p>GitHub</p>
   </section>
 
   <footer class="footer">
-    <p>&copy; <span id="year"></span> Your Name</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
-
-<!-- wbl.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>WBL | My Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <nav class="navbar">
-    <a href="index.html">Welcome</a>
-    <a href="wbl.html">Work-Based Learning</a>
-    <a href="extracurricular.html">Extracurricular</a>
-    <a href="extras.html">Extras</a>
-  </nav>
-
-  <h1>Work-Based Learning</h1>
-
-  <section>
-    <h2>Project Evidence</h2>
-    <p>Describe or link to your WBL projects here.</p>
-  </section>
-
-  <section>
-    <h2>Certifications</h2>
-    <ul>
-      <li>Google IT Support</li>
-      <li>Adobe Photoshop Certified</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Awards</h2>
-    <ul>
-      <li>Student of the Month</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Classroom Experience</h2>
-    <p>Talk about labs, presentations, teamwork, or hands-on experience.</p>
-  </section>
-
-  <section>
-    <h2>Resume</h2>
-    <button id="showResume">Toggle Resume</button>
-    <div id="resumeSection" class="hidden">
-      <a href="resume.pdf" target="_blank">Download my resume</a>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <p>&copy; <span id="year"></span> Your Name</p>
+    <p>&copy; <span id="year"></span> Jhervhyce Concepcion</p>
   </footer>
 
   <script src="script.js"></script>
@@ -135,61 +74,19 @@
   <section>
     <h2>Hobbies</h2>
     <ul>
-      <li>Photography</li>
+      <li>Cooking</li>
       <li>Gaming</li>
-      <li>Music Production</li>
+      <li>Going to the Gym</li>
     </ul>
   </section>
 
   <section>
     <h2>Community Service</h2>
-    <p>Describe how you’ve given back or volunteered in your community.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
   </section>
 
   <footer class="footer">
-    <p>&copy; <span id="year"></span> Your Name</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
-
-<!-- extras.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Extras | My Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <nav class="navbar">
-    <a href="index.html">Welcome</a>
-    <a href="wbl.html">Work-Based Learning</a>
-    <a href="extracurricular.html">Extracurricular</a>
-    <a href="extras.html">Extras</a>
-  </nav>
-
-  <h1>Extras</h1>
-
-  <section>
-    <h2>Photos</h2>
-    <div class="photo-grid">
-      <img src="images/photo1.jpg" alt="Project Photo 1">
-      <img src="images/photo2.jpg" alt="Volunteering">
-    </div>
-  </section>
-
-  <section>
-    <h2>Evidence Links</h2>
-    <ul>
-      <li><a href="https://example.com/project-evidence">Project Documentation</a></li>
-      <li><a href="https://example.com/certification">Certification Link</a></li>
-    </ul>
-  </section>
-
-  <footer class="footer">
-    <p>&copy; <span id="year"></span> Your Name</p>
+    <p>&copy; <span id="year"></span>Jhervhyce Concepcion</p>
   </footer>
 
   <script src="script.js"></script>
