--- a/extracurricular.html
+++ b/extracurricular.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="navbar">
     <a href="index.html">Welcome</a>
-    <a href="wbl.html">Work-Based Learning</a>
+    <a href="wbl.html">WBL</a>
     <a href="extracurricular.html">Extracurricular</a>
     <a href="extras.html">Extras</a>
   </nav>
