--- a/extras.html
+++ b/extras.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="navbar">
     <a href="index.html">Welcome</a>
-    <a href="wbl.html">Work-Based Learning</a>
+    <a href="wbl.html">WBL</a>
     <a href="extracurricular.html">Extracurricular</a>
     <a href="extras.html">Extras</a>
   </nav>
@@ -34,14 +34,14 @@
   <section>
     <h2>Evidence Links</h2>
     <ul>
-      <li><a href="https://example.com/project-evidence">OSHA-10</a></li>
-      <li><a href="https://example.com/project-evidence">Teamwork</a></li>
-      <li><a href="https://example.com/project-evidence">Person Financial Management</a></li>
-      <li><a href="https://example.com/project-evidence">Written Communication</a></li>
-      <li><a href="https://example.com/project-evidence">Interviewing Skills</a></li>
-      <li><a href="https://example.com/project-evidence">EVERFI: Financial Literacy</a></li>
-      <li><a href="https://example.com/project-evidence">Cyber Safety Awareness</a></li>
-      <li><a href="https://example.com/project-evidence">Communication Skills</a></li>
+      <li><a href="https://drive.google.com/file/d/1Az_6t_1AMh_4VDwSnuw6pqpObOZKs3Zd/view?usp=sharing">OSHA-10</a></li>
+      <li><a href="https://drive.google.com/file/d/13JrYis7kLy-YKby0_EqrldIujXYy55D3/view?usp=sharing">Teamwork</a></li>
+      <li><a href="https://drive.google.com/file/d/1iVae_JwYQF59QjdtIkPQ1DDIudoAjJsT/view?usp=sharing">Person Financial Management</a></li>
+      <li><a href="https://drive.google.com/file/d/1sWHxIGI34caogx_BvZFV59NSDG_P7fqI/view?usp=sharing">Written Communication</a></li>
+      <li><a href="https://drive.google.com/file/d/1tf9dHGiA595_DVrMK7MJuAZQmzVjOxBu/view?usp=sharing">Interviewing Skills</a></li>
+      <li><a href="https://drive.google.com/file/d/1AymL_on2dMcuYLhzI7J5WGJKGPHMbM23/view?usp=sharing">EVERFI: Financial Literacy</a></li>
+      <li><a href="https://drive.google.com/file/d/13QnhMSb6yc_yv2HJlhH5O7GO4l6A6hbs/view?usp=sharing">Cyber Safety Awareness</a></li>
+      <li><a href="https://drive.google.com/file/d/1Odc6KSTGs-aZyZr4BP5UDrAmNOJ4gA5T/view?usp=sharing">Communication Skills</a></li>
     </ul>
   </section>
 
