--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
     <a href="index.html">Welcome</a>
-    <a href="wbl.html">Work-Based Learning</a>
+    <a href="wbl.html">WBL</a>
     <a href="extracurricular.html">Extracurricular</a>
     <a href="extras.html">Extras</a>
   </nav>
@@ -42,7 +42,7 @@
     <h2>Contact Info</h2>
     <p>Email: <a href="mailto:you@example.com">jhervhyce.concepcion@gmail.com</a></p>
     <p>Phone: (808) 381-4792</p>
-    <p>GitHub</p>
+    <p>GitHub: <a href="https://github.com/jhervhyce">jhervhyce</a></p>
   </section>
 
   <footer class="footer">
