--- a/extras.html
+++ b/extras.html
@@ -17,32 +17,60 @@
   <h1>Extras</h1>
 
   <section>
-    <h2>Photos</h2>
-    <div class="photo-grid">
-      <img src="images/photo2.jpg" alt="Volunteering">
-      <img src="images/photo1.jpg" alt="Lorem.">
-      <img src="images/photo1.jpg" alt="Lorem.">
-      <img src="images/photo1.jpg" alt="Lorem.">
-      <img src="images/photo1.jpg" alt="Lorem.">
-      <img src="images/photo1.jpg" alt="Lorem.">
-      <img src="images/photo1.jpg" alt="Lorem.">
-      <img src="images/photo1.jpg" alt="Lorem.">
-      <img src="images/photo1.jpg" alt="Lorem.">
-    </div>
+  <h2>Photos</h2>
+  <div class="extra-images photo-grid">
+    <img src="images/photo2.jpg" alt="Volunteering">
+    <img src="images/photo1.jpg" alt="Photo 1">
+    <img src="images/photo1.jpg" alt="Photo 2">
+    <img src="images/photo1.jpg" alt="Photo 3">
+    <img src="images/photo1.jpg" alt="Photo 4">
+    <img src="images/photo1.jpg" alt="Photo 5">
+    <img src="images/photo1.jpg" alt="Photo 6">
+    <img src="images/photo1.jpg" alt="Photo 7">
+    <img src="images/photo1.jpg" alt="Photo 8">
+  </div>
   </section>
 
-  <section>
+
+
+  <section class="evidence-links">
     <h2>Evidence Links</h2>
     <ul>
-      <li><a href="https://drive.google.com/file/d/1Az_6t_1AMh_4VDwSnuw6pqpObOZKs3Zd/view?usp=sharing">OSHA-10</a></li>
-      <li><a href="https://drive.google.com/file/d/13JrYis7kLy-YKby0_EqrldIujXYy55D3/view?usp=sharing">Teamwork</a></li>
-      <li><a href="https://drive.google.com/file/d/1iVae_JwYQF59QjdtIkPQ1DDIudoAjJsT/view?usp=sharing">Person Financial Management</a></li>
-      <li><a href="https://drive.google.com/file/d/1sWHxIGI34caogx_BvZFV59NSDG_P7fqI/view?usp=sharing">Written Communication</a></li>
-      <li><a href="https://drive.google.com/file/d/1tf9dHGiA595_DVrMK7MJuAZQmzVjOxBu/view?usp=sharing">Interviewing Skills</a></li>
-      <li><a href="https://drive.google.com/file/d/1AymL_on2dMcuYLhzI7J5WGJKGPHMbM23/view?usp=sharing">EVERFI: Financial Literacy</a></li>
-      <li><a href="https://drive.google.com/file/d/13QnhMSb6yc_yv2HJlhH5O7GO4l6A6hbs/view?usp=sharing">Cyber Safety Awareness</a></li>
-      <li><a href="https://drive.google.com/file/d/1Odc6KSTGs-aZyZr4BP5UDrAmNOJ4gA5T/view?usp=sharing">Communication Skills</a></li>
+      <li><a href="https://drive.google.com/file/d/1pBmPMPrV7sQBfVzurO4mNi2N52Ey6P6n/view?usp=sharing" target="_blank" rel="noopener">OSHA-10</a></li>
+      <li><a href="https://drive.google.com/file/d/1o5WwVBy28TpvNKFKo_6ie_R81Hk_38ST/view?usp=sharing" target="_blank" rel="noopener">Teamwork</a></li>
+      <li><a href="https://drive.google.com/file/d/1eUjlHLOiTD3q2WSXfJASadyupc75d_ir/view?usp=sharing" target="_blank" rel="noopener">Personal Financial Management</a></li>
+      <li><a href="https://drive.google.com/file/d/1bkto6KrMVgzZCSpTGTi5wJdYgrZpakfn/view?usp=sharing" target="_blank" rel="noopener">Written Communication</a></li>
+      <li><a href="https://drive.google.com/file/d/1awKPoSykWhTpnXUgoJVH-2Galk-sjv72/view?usp=sharing" target="_blank" rel="noopener">Interviewing Skills</a></li>
+      <li><a href="https://drive.google.com/file/d/1LMuwp7ZkHGunWjCjK9gwQ9gTBHrFdS29/view?usp=sharing" target="_blank" rel="noopener">EVERFI: Financial Literacy</a></li>
+      <li><a href="https://drive.google.com/file/d/1m-i4a3dpwdcjYBSEm8o1EfojmPksUUv-/view?usp=sharing" target="_blank" rel="noopener">Cyber Safety Awareness</a></li>
+      <li><a href="https://drive.google.com/file/d/1d6W3J99aV2WwROJPGY4U8N88omXfGxht/view?usp=sharing" target="_blank" rel="noopener">Communication Skills</a></li>
     </ul>
+  </section>
+
+  <section class="car-brands">
+    <h2>Car Brands Featured</h2>
+    <div class="car-list">
+      <div class="car-item">
+        <h3>Ferrari</h3>
+        <p>LaFerrari FXX-K EVO, 812 Novitec N-Largo, 458</p>
+      </div>
+      <div class="car-item">
+        <h3>Aston Martin</h3>
+        <p>Vulcan, Older Vantage V12, Newer Vantage V8</p>
+      </div>
+      <div class="car-item">
+        <h3>Lamborghini</h3>
+        <p>Centenario, Sesto Elemento</p>
+      </div>
+      <div class="car-item">
+        <h3>Maserati</h3>
+        <p>MC12, MC20</p>
+      </div>
+      <div class="car-item">
+        <h3>McLaren</h3>
+        <p>P1 GTR, 765LT, 600LT</p>
+      </div>
+    </div>
   </section>
 
   <footer class="footer">
