--- a/wbl.html
+++ b/wbl.html
@@ -18,12 +18,22 @@
 
   <section>
     <h2>Project Evidence</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+    <div class="project-grid">
+      <img src="images/project1.jpg" alt="Project 1">
+      <img src="images/project2.jpg" alt="Project 2">
+      <img src="images/project3.jpg" alt="Project 3">
+      <img src="images/project4.jpg" alt="Project 4">
+      <img src="images/project5.jpg" alt="Project 5">
+      <img src="images/project6.jpg" alt="Project 6">
+      <img src="images/project7.jpg" alt="Project 7">
+      <img src="images/project8.jpg" alt="Project 8">
+      <img src="images/project9.jpg" alt="Project 9">
+      <img src="images/project10.jpg" alt="Project 10">
+      <img src="images/project11.jpg" alt="Project 11">
+      <img src="images/project12.jpg" alt="Project 12">
+    </div>
   </section>
+
 
   <section>
     <h2>Certifications</h2>
@@ -42,22 +52,24 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapi
   <section>
     <h2>Awards</h2>
     <ul>
-      <li>Lorem ipsum dolor sit amet consectetur adipiscing elit.</li>
+      <li>Eligible for National Honor Society (NHS) membership</li>
+      <li>Eligible for National Technical Honor Society (NTHS) membership</li>
     </ul>
   </section>
 
+
   <section>
     <h2>Classroom Experiences</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+        <p> During my freshman year, I took on hands-on tech projects like breaking down and rebuilding a medium ATX computer, completing a science project, and participating in Intro to Computer Science. These experiences sparked my interest in technology and laid a strong foundation for my future learning. <br><br> In sophomore year, I expanded my skills by making an RJ45 network cable and completing the Cisco Networking Academy (NetAcad) course, which gave me a solid understanding of networking basics. <br><br> Currently, as a junior, I am progressing through Cybersecurity 2 and Foundations of Business & Marketing. I have completed my electronic portfolio, developed coding projects including games and a digital clock, learned to use Git Bash, and am close to mastering Excel. I have also created multiple business and marketing presentations using Canva and Google Slides, and recently developed and presented a full business plan. I have started working on my senior portfolio and completed a project-based learning (PBL) essay assignment that challenged me to apply my skills in real-world scenarios. </p>  
   </section>
 
   <section>
-    <h2>Resume</h2>
-    <button id="showResume">Resume</button>
-    <div id="resumeSection" class="hidden">
-      <a href="resume.pdf" target="_blank">Download my resume</a>
-    </div>
+  <h2>Resume</h2>
+  <div id="resumeSection" class="resume-viewer">
+    <iframe src="https://drive.google.com/file/d/1uz_FCv3qFviucnD3-XVMVHXRrNZirmwN/preview" title="My Resume" frameborder="0"></iframe>
+  </div>
   </section>
+
 
   <footer class="footer">
     <p>&copy; <span id="year"></span>Jhervhyce Concepcion</p>
