--- a/wbl.html
+++ b/wbl.html
@@ -16,21 +16,12 @@
 
   <h1>Work-Based Learning</h1>
 
-  <section>
+<section>
     <h2>Project Evidence</h2>
-    <div class="project-grid">
-      <img src="images/project1.jpg" alt="Project 1">
-      <img src="images/project2.jpg" alt="Project 2">
-      <img src="images/project3.jpg" alt="Project 3">
-      <img src="images/project4.jpg" alt="Project 4">
-      <img src="images/project5.jpg" alt="Project 5">
-      <img src="images/project6.jpg" alt="Project 6">
-      <img src="images/project7.jpg" alt="Project 7">
-      <img src="images/project8.jpg" alt="Project 8">
-      <img src="images/project9.jpg" alt="Project 9">
-      <img src="images/project10.jpg" alt="Project 10">
-      <img src="images/project11.jpg" alt="Project 11">
-      <img src="images/project12.jpg" alt="Project 12">
+    <div class="iframe-container">
+      <iframe src="https://drive.google.com/file/d/1NW1g4xnja2pR_WJio99Xfuf_AjMrLrIi/preview" width="400" height="300"></iframe>
+      <iframe src="https://drive.google.com/file/d/1GWYnCNVDvK4tcK7cbiiIckQYBIw6eKZb/preview" width="400" height="300"></iframe>
+      <iframe src="https://drive.google.com/file/d/1jn4a4N7m0kfvk1UBzbBZMIofavH6wZ2r/preview" width="400" height="300"></iframe>
     </div>
   </section>
 
@@ -66,7 +57,7 @@
   <section>
   <h2>Resume</h2>
   <div id="resumeSection" class="resume-viewer">
-    <iframe src="https://drive.google.com/file/d/1uz_FCv3qFviucnD3-XVMVHXRrNZirmwN/preview" title="My Resume" frameborder="0"></iframe>
+    <iframe src="https://drive.google.com/file/d/1uz_FCv3qFviucnD3-XVMVHXRrNZirmwN/preview" title="My Resume" frameborder="0" width="580" height="300"></iframe>
   </div>
   </section>
 
