--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
   </nav>
 
     <header class="welcome-hero">
-      <iframe src="https://drive.google.com/file/d/1-DtZLxk6JZryPrmrHPhQ-AF2urGT2RXH/preview" width="640" height="480"></iframe>
-      <h1>Jhervhyce Concepcion</h1>
-      <iframe src="https://drive.google.com/file/d/1ZTLdyYnSlrfo233DZ6Xlq7dXpKbWaNWo/preview" width="640" height="480"></iframe>
-    </header>
+        <img
+          src="images/PROFILE.jpg"
+          alt="Portfolio image"
+          class="headshot">
+
+  <h1>Jhervhyce Concepcion</h1>
+
+        <img
+          src="images/SIDE.jpg"
+          alt="Portfolio image"
+          class="second-headshot">
+  </header>
+
 
   <section>
     <h2>Bio</h2>
-    <p>I am Jhervhyce Concepcion, a detail-oriented individual with strong analytical skills. I am passionate about cooking, strategic gaming, and community service. Through tutoring, I apply logical problem-solving to help students overcome academic challenges and build confidence.</p>
+    <p>I am Jhervhyce Concepcion, a detail-oriented individual with strong analytical skills. I am passionate about cooking, fitness, and financial markets. I actively study stock trading and investment strategies, applying the same strategic thinking I use in gaming to analyze market patterns and trends. I value financial independence and am committed to building a fulfilling life through disciplined decision-making and continuous learning.</p>
   </section>
 
   <section>
@@ -36,51 +45,9 @@
       <li>Serve in the military, specializing in cyber or IT fields to gain hands-on experience and discipline.</li>
       <li>Pursue higher education in cybersecurity or information technology to deepen technical knowledge.</li>
       <li>Leverage military and academic experience to start my own technology-focused business.</li>
-      <li>Achieve personal success and enjoy the lifestyle that comes with it, including driving some of the world’s best cars like Ferraris, Aston Martins, Lamborghinis, Maseratis, and McLarens.</li>
+      <li>Achieve personal success and enjoy the lifestyle that comes with it, including driving some of the world’s best cars.</li>
     </ul>
 
-    <div class="cars-gallery">
-      <section>
-        <h3>Ferraris</h3>
-        <div class="car-images">
-          <img src="https://live.staticflickr.com/4572/24832185328_d89a15d2f5_b.jpg" alt="Ferrari Model 1">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Osaka_Auto_Messe_2022_%28359%29_-_NOVITEC_812_Superfast_N-Largo.jpg" alt="Ferrari Model 2">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Ferrari_488_Pista_2_Genf_2018.jpg" alt="Ferrari Model 3">
-        </div>
-      </section>
-
-      <section>
-        <h3>Aston Martins</h3>
-        <div class="car-images">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/f/f7/2015_Aston_Martin_Vulcan_7.0_Front.jpg" alt="Aston Martin Model 1">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/Aston_Martin_DBS_-_Flickr_-_Alexandre_Prévot_%283%29.jpg" alt="Aston Martin Model 2">
-        </div>
-      </section>
-
-      <section>
-        <h3>Lamborghinis</h3>
-        <div class="car-images">
-          <img src="https://live.staticflickr.com/4238/35053397400_a1303b907c_b.jpg" alt="Lamborghini Model 1">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Lamborghini_Sesto_Elemento_%2816107850781%29.jpg" alt="Lamborghini Model 2">
-        </div>
-      </section>
-
-      <section>
-        <h3>Maseratis</h3>
-        <div class="car-images">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Maserati_MC12_2-cropped.jpg" alt="Maserati Model 1">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Maserati_MC20_IAA_2021_1X7A0087.jpg" alt="Maserati Model 2">
-        </div>
-      </section>
-
-      <section>
-        <h3>McLarens</h3>
-        <div class="car-images">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/FoS20162016_0625_091900AA_%2827624423280%29_%28cropped%29.jpg" alt="McLaren Model 1">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/2022_McLaren_765LT_Spider_MSO1.jpg" alt="McLaren Model 2">
-        </div>
-      </section>
-    </div>
   </section>
 
   <section>
