--- a/wbl.html
+++ b/wbl.html
@@ -25,6 +25,34 @@
     </div>
   </section>
 
+  <section>
+    <h2>STEM Project Evidence</h2>
+    <div class="stem-project-images">
+      <img src="images/STEM1 (1).png" alt="STEM Project Evidence Image 1" width="400" height="300">
+      <img src="images/STEM1 (2).png" alt="STEM Project Evidence Image 2" width="400" height="300">
+      <img src="images/STEM1 (3).png" alt="STEM Project Evidence Image 3" width="400" height="300">
+    </div>
+  </section>
+
+  <section>
+    <h2>Stocks</h2>
+    <div class="stocks-images">
+      <img src="images/STOCKS (1).png" alt="Stock Market Evidence Image 1" width="400" height="300">
+      <img src="images/STOCKS (3).png" alt="Stock Market Evidence Image 2" width="400" height="300">
+      <img src="images/STOCKS (2).png" alt="Stock Market Evidence Image 3" width="400" height="300">
+      <img src="images/STOCKS (4).png" alt="Stock Market Evidence Image 4" width="400" height="300">
+    </div>
+  </section>
+
+  <section>
+    <h2>HACC (Hawaii Annual Code Challenge)</h2>
+    <div class="hacc-images">
+      <img src="images/HACC (1).png" alt="HACC Evidence Image 1" width="400" height="300">
+      <img src="images/HACC (2).png" alt="HACC Evidence Image 2" width="400" height="300">
+      <img src="images/HACC (3).png" alt="HACC Evidence Image 3" width="400" height="300">
+    </div>
+  </section>
+
 
   <section>
     <h2>Certifications</h2>
@@ -45,13 +73,16 @@
     <ul>
       <li>Eligible for National Honor Society (NHS) membership</li>
       <li>Eligible for National Technical Honor Society (NTHS) membership</li>
+      <li>Eligible for Seal of Biliteracy</li>
+      <li>Eligible for STEM Honors</li>
+      <li>Eligible for CTE Honors</li>
     </ul>
   </section>
 
 
   <section>
     <h2>Classroom Experiences</h2>
-        <p> During my freshman year, I took on hands-on tech projects like breaking down and rebuilding a medium ATX computer, completing a science project, and participating in Intro to Computer Science. These experiences sparked my interest in technology and laid a strong foundation for my future learning. <br><br> In sophomore year, I expanded my skills by making an RJ45 network cable and completing the Cisco Networking Academy (NetAcad) course, which gave me a solid understanding of networking basics. <br><br> Currently, as a junior, I am progressing through Cybersecurity 2 and Foundations of Business & Marketing. I have completed my electronic portfolio, developed coding projects including games and a digital clock, learned to use Git Bash, and am close to mastering Excel. I have also created multiple business and marketing presentations using Canva and Google Slides, and recently developed and presented a full business plan. I have started working on my senior portfolio and completed a project-based learning (PBL) essay assignment that challenged me to apply my skills in real-world scenarios. </p>  
+        <p> During my freshman year, I took on hands-on tech projects like breaking down and rebuilding a medium ATX computer, completing a science project, and participating in Intro to Computer Science. These experiences sparked my interest in technology and laid a strong foundation for my future learning. <br><br> In sophomore year, I expanded my skills by making an RJ45 network cable and completing the Cisco Networking Academy (NetAcad) course, which gave me a solid understanding of networking basics. <br><br> As a junior, I am progressing through Cybersecurity 2 and Foundations of Business & Marketing. I have completed my electronic portfolio, developed coding projects including games and a digital clock, learned to use Git Bash, and am close to mastering Excel. I have also created multiple business and marketing presentations using Canva and Google Slides, and recently developed and presented a full business plan. I have started working on my senior portfolio and completed a project-based learning (PBL) essay assignment that challenged me to apply my skills in real-world scenarios. <br><br> Currently, as a senior, my focus is entirely on STEM education, including hands-on experience in Cyber Work-Based Learning (WBL) where I've visited HACC and am participating in the Congressional App Challenge on December 22nd. I'm also taking advanced Financial Management, where I learn about stocks, market patterns, predictions, and strategies for investing long-term to grow a portfolio to a substantial amount of money by retirement.</p>  
   </section>
 
   <section>
