--- a/wbl.html
+++ b/wbl.html
@@ -100,9 +100,25 @@
 
   <section>
     <h2>College Presentations and Other Presentations</h2>
+    <h3>UTI Presentation</h3>
     <div class="iframe-container">
       <img src="images/UTI (1).jpg" alt="College Presentation 1" frameborder="0" width="400" height="300" scrolling="yes">
       <img src="images/UTI (2).jpg" alt="Other Presentation 1" frameborder="0" width="400" height="300" scrolling="yes">
+    </div>
+
+    <h3>Senior Career Fair</h3>
+    <div class="presentation-group">
+      <img src="images/careerFair (1).png" alt="Presentation 1 Image 1" width="400" height="300">
+      <img src="images/careerFair (3).png" alt="Presentation 1 Image 2" width="400" height="300">
+      <img src="images/careerFair (2).png" alt="Presentation 1 Image 3" width="400" height="300">
+      <img src="images/careerFair (4).png" alt="Presentation 1 Image 4" width="400" height="300">
+      <img src="images/careerFair (5).png" alt="Presentation 1 Image 5" width="400" height="300">
+    </div>
+
+    <h3>Pearl Harbor Internships</h3>
+    <div class="presentation-group">
+      <img src="images/PearlHarbor (1).png" alt="Presentation 2 Image 1" width="400" height="300">
+      <img src="images/PearlHarbor (2).png" alt="Presentation 2 Image 2" width="400" height="300">
     </div>
   </section>
 
